--- a/JavaScript/asiankitchen/css/style.css
+++ b/JavaScript/asiankitchen/css/style.css
@@ -17,3 +17,27 @@ h2 {
     align-items: center;
     margin-top: 15px;
 }
+
+#cardContainer {
+    margin-top: 30px;
+}
+
+.price{
+    display: inline-block;
+    margin-right: auto;
+    position: absolute;
+    top: 1px;
+    right: 1px;
+}
+
+.img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 13px;
+}
+
+h5, h6 {
+    color: #e00a00;
+}
+  
