--- a/Bootstrap/instagramclone/css/style.css
+++ b/Bootstrap/instagramclone/css/style.css
@@ -7,6 +7,10 @@ nav {
   margin-left: 192px;
 }
 
+.middlearea {
+  max-width: 200px !important;
+}
+
 ::placeholder{
   text-align: center;
   font-size: 14px;
