--- a/Bootstrap/bootstraplinkedinclone/css/style.css
+++ b/Bootstrap/bootstraplinkedinclone/css/style.css
@@ -1,6 +1,6 @@
 .navbarbg {
-  height: 55px;
-  background-color: white;
+  height: 53px;
+  background-color: #f1f1f1 !important;
 }
 
 input.searche {
@@ -11,9 +11,10 @@ input.searche {
 }
 
 input.searche::placeholder {
-  font-size: 14px;
+  text-align: center;
+  font-size: 12px;
   color: gray;
-  background-image: url(/bootstraplinkedinclone/assets/search-solid.svg);
+  background-image: url("../assets/search-solid.svg");
   background-repeat: no-repeat;
   background-size: 7%;
 }
