--- a/Bootstrap/bootstraplinkedinclone/css/style.css
+++ b/Bootstrap/bootstraplinkedinclone/css/style.css
@@ -1,6 +1,6 @@
 .navbarbg {
   height: 53px;
-  background-color: #f1f1f1 !important;
+  background-color: #DCDAD7 !important;
 }
 
 input.searche {
