--- a/Bootstrap/bootstraplinkedinclone/css/style.css
+++ b/Bootstrap/bootstraplinkedinclone/css/style.css
@@ -3,6 +3,12 @@
   background-color: #DCDAD7 !important;
 }
 
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 60px;
+}
+
 input.searche {
   height: 36px;
   max-width: 500px;
