--- a/Bootstrap/bootstraplinkedinclone/css/style.css
+++ b/Bootstrap/bootstraplinkedinclone/css/style.css
@@ -72,9 +72,23 @@ input.content::placeholder {
   font-weight: bolder;
   font-size: 14px;
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url(/bootstraplinkedinclone/assets/edit-regular.svg);
+  background-image: url("../assets/edit-regular.svg");
   background-repeat: no-repeat;
   background-size: auto;
+}
+
+.blue {
+  fill:blue;
+}
+
+.green {
+  fill: green;
+}
+.orange {
+  fill:orange;
+}
+.purple {
+  fill: purple;
 }
 
 div.card {
