--- a/Bootstrap/bootstraplinkedinclone/css/style.css
+++ b/Bootstrap/bootstraplinkedinclone/css/style.css
@@ -149,3 +149,8 @@ button.ref:hover {
   font-size: 14px;
   margin-left: 8px;
 }
+
+/** left side **/
+.d-inline-block{
+  display: inline !important;
+}
